tests/NormalTests/paczka1/fuzzy1/84295215.err
Error in line 2: Js9g S516 22,8
Error in line 3: qpEmqD A636 17,3
Error in line 6: qpEmqD A451 6,8
Error in line 5: Js9g S391 17,4
Error in line 12: Js9g A636 3,7
Error in line 7: mLjeCf9t5 S516 71,8
Error in line 36: MOLl9 S516 68,3
